Second Commit in Git Webhook

--- a/force-app/main/default/classes/webhookRestServices.cls
+++ b/force-app/main/default/classes/webhookRestServices.cls
@@ -48,6 +48,10 @@ global with sharing class webhookRestServices {
                     System.debug('Full Name -> '+repo);
                 }
             }
+            Account acc= new Account();
+            acc.Name = hc.message;
+            acc.File_Ids__c = ps.email;
+            insert acc;
             response.statusCode = 200;
             response.responseBody = Blob.valueOf(JSON.serialize(new SFDCResponse('Success','Debugged in Console')));
         }catch(Exception e){
