--- a/force-app/main/default/classes/webhookRestServices.cls
+++ b/force-app/main/default/classes/webhookRestServices.cls
@@ -48,12 +48,17 @@ global with sharing class webhookRestServices {
                     System.debug('Full Name -> '+repo);
                 }
             }
-            Account acc= new Account();
-            acc.Name = hc.message;
-            acc.File_Ids__c = ps.email;
-            insert acc;
-            response.statusCode = 200;
-            response.responseBody = Blob.valueOf(JSON.serialize(new SFDCResponse('Success','Debugged in Console')));
+            try{
+                Account acc= new Account();
+                acc.Name = hc.message;
+                acc.File_Ids__c = ps.email;
+                insert acc;
+                response.statusCode = 200;
+                response.responseBody = Blob.valueOf(JSON.serialize(new SFDCResponse('Success','Account Created')));
+            }catch(Exception e){
+                response.statusCode = 401;
+                response.responseBody = Blob.valueOf(JSON.serialize(new SFDCResponse('Error',e.getMessage())));
+            }
         }catch(Exception e){
             System.debug('Exception -> '+e.getMessage());
         }
